[package]
name = "ec25519"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Small, self-contained, wasm-friendly elliptic curve algorithms for 25519 curve family"
readme = "README.md"
keywords = ["crypto", "ed25519", "x25519", "eddsa", "signature"]
repository = "https://github.com/cyphernet-dao/rust-25519"
homepage = "https://github.com/jedisct1/rust-ed25519-compact"
categories = ["algorithms", "cryptography", "no-std", "wasm"]
license = "MIT"

[features]
default = ["random", "std", "x25519", "pem"]
pem = ["ct-codecs"]
random = ["getrandom"]
traits = ["ed25519"]
self-verify = []
blind-keys = []
std = []
opt_size = []
disable-signatures = []
x25519 = []

[dependencies]
ct-codecs = { version = "1.1", optional = true }
getrandom = { version = "0.2", optional = true }
ed25519 = { version = "1.5", optional = true }

[dev-dependencies]
getrandom = "0.2"
ct-codecs = "1.1"
